[tool.poetry]
name = "generator_df"
version = "0.1.0"
description = ""
authors = ["devscheffer <devscheffer@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "^1.4.3"
ipykernel = "^6.15.1"

[tool.poetry.dev-dependencies]
black = {version = "^24.3.0", allow-prereleases = true}
pylama = "^8.3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
